fix start button visibility

--- a/client/src/styles/lobby.css
+++ b/client/src/styles/lobby.css
@@ -13,6 +13,7 @@
 }
 
 #start {
+  display: block;
   background-color: green;
   color: black;
   width: 100%;
